--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -45,7 +45,7 @@
 }
 .about p{
     color: #676767;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
 }
 .caption{
     border-radius: 10px;
@@ -90,6 +90,26 @@
     max-width: 400px;
 } */
 
+.about-button {
+    margin-top: 20px;
+}
+
+.about-button .btn {
+    background-color: #212EA0;
+    color: white;
+    padding: 12px 24px;
+    border: none;
+    border-radius: 5px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.about-button .btn:hover {
+    background-color: #000F38;
+    transform: translateY(-3px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
 
 /* --------- Media Query -------------- */
 @media (max-width: 800px){
